# teuthida

./: .gitignore  LICENSE  pyproject.toml
teuthida/: __init__.py  gen.py  sim.py
